@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-15T16:34:26Z",
-  "count_outdated" : 731,
-  "uniques_outdated" : 381,
-  "count" : 750,
+  "timestamp" : "2022-08-16T02:19:30Z",
+  "count_outdated" : 734,
+  "uniques_outdated" : 382,
+  "count" : 752,
   "uniques" : 393,
   "clones" : [
-    {
-      "timestamp": "2022-08-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-02T00:00:00Z",
       "count": 3,
